# Swiss_re_ass

./: Dockerfile  pyproject.toml
access.log/: res.json
src/log_analyzer/: analyzer.py  cli.py  parse_file.py
